# IpvaBf

./: .gitignore  README.md  pyproject.toml  requirements.txt
IPVABF/: .gitignore  arquivos_sem_189,34.txt  pyproject.toml  resultados_finais.txt
IPVABF/ipvabf/Ipva/: MainIpva.py  ObterDadosIpvaDB.py  escreveLog.py
IPVABF/ipvabf/Licenciamento/: MainLicenciamento copy 2.py  MainLicenciamento.py  ObterDadosLicenciamentoDB copy.py  ObterDadosLicenciamentoDB.py  ObterResultadoFinalDB.py  ResultadoEmail.py  RodarLicMultas.ps1  RodarLicMultas0.ps1  RodarLicMultas1.ps1  RodarLicMultas5.ps1  RodarLicMultas7.ps1  captcha.py  captchaLic.py  captchaLicenciamento.py  escreveLog.py
IPVABF/ipvabf/Licenciamento/ResultadoCsv/: Veiculo_SEM_DEBITO_20_06_2025.csv  Veiculos_A_PAGAR_03_08_2025.csv  Veiculos_A_PAGAR_20_06_2025.csv  Veiculos_A_PAGAR_22_07_2025.csv  Veiculos_A_PAGAR_23_06_2025.csv  Veiculos_A_PAGAR_27_06_2025.csv  Veiculos_ERRO_18_07_2025.csv  Veiculos_ERRO_20_06_2025.csv  Veiculos_ERRO_26_06_2025.csv  Veiculos_ERRO_27_06_2025.csv  Veiculos_SEM_DEBITO_22_07_2025.csv  Veiculos_SEM_DEBITO_26_06_2025.csv  Veiculos_SEM_DEBITO_27_06_2025.csv  resultado_Veiculo_A_PAGAR_18_06_2025.csv  resultado_Veiculo_A_PAGAR_20_06_2025.csv  resultado_Veiculo_ERRO_18_06_2025.csv  (+2 more)
IPVABF/ipvabf/Multas/: captchaMultas.py
IPVABF/ipvabf/ObterDados/: MainObterDadosbkp.py  MainObterMultasDados.py  ObterDadosMultasDB.py
IPVABF/tests/Licenciamento/: Licenciamento.py  ObterDadosLicenciamentoDB.py
IPVABF/tests/ObterDados/: MainObterDados.py  ObterDadosDB.py
ipvabf/Ipva/: MainIpva.py  escreveLog.py  (+5 more)
(+742 files in other folders)
